# unlock

./: .gitignore  CLAUDE.md  README.md  cli.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: test.yml
data/: anchor_prompts.jsonl  cot_prompts.jsonl
scripts/: generate_prompts.py
src/unlock/: eval.py  extract.py  hub.py  transfer.py
tests/: test_extract.py
